add redis and mongo db artifacts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=calculator
 spring.data.mongodb.password=cluster_182*
 spring.data.mongodb.database=calculator
+# REDIS CACHE CONFIGURATION
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=redis_182*
+spring.cache.redis.time-to-live=15000
