--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,19 @@ server.servlet.context-path=/calculator-api
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=calculator
+spring.data.mongodb.username=clustering
 spring.data.mongodb.password=cluster_182*
 spring.data.mongodb.database=calculator
 # REDIS CACHE CONFIGURATION
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=redis_182*
 spring.cache.redis.time-to-live=15000
+# LOGBACK
+logging.path=C:/Dev/Logs/cyxtera-test
+# HEALTH ENDPOINT CONFIGURATION
+management.endpoint.health.show-details=always
+# INFO ENDPOINT CONFIGURATION
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
