--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,9 @@ spring.cache.redis.time-to-live=15000
 logging.path=C:/Dev/Logs/cyxtera-test
 # HEALTH ENDPOINT CONFIGURATION
 management.endpoint.health.show-details=always
+spring.resources.add-mappings=true
 # INFO ENDPOINT CONFIGURATION
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
+# PROFILE ACTIVE
